# libTinyProtocol

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Coverage.sh  LICENSE  README.md
Inc/libTinyProtocol/: TinyProtocol.h
Src/: TinyProtocol.c
Tests/UnitTest/: CMakeLists.txt
